<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Discography</string>
    <string name="contrase_a">Contraseña</string>
    <string name="view_users" tools:keep="@string/view_users">Ver usuarios</string>
    <string name="type_an_artist_name" tools:keep="@string/type_an_artist_name">Escribe el nombre de un artista</string>
    <string name="login">Iniciar sesión</string>
    <string name="logo" tools:keep="@string/logo">logo</string>
    <string name="email">Email</string>
    <string name="confirm_password">Repetir contraseña</string>
    <string name="name">Nombre</string>
    <string name="register">Regístrate</string>
    <string name="surname">Apellidos</string>
    <string name="back">Atrás</string>
    <string name="buscar_discograf_a">Buscar discografía</string>
    <string name="escribe_el_nombre_de_un_artista">Escribe el nombre de un artista</string>
    <string name="hello_blank_fragment" tools:keep="@string/hello_blank_fragment">Hello blank fragment</string>
    <string name="this_is_album_title">This is album title</string>
    <string name="this_is_album_date">This is album date</string>
    <string name="logoimagen">Logo</string>
</resources>